<resources>
    <string name="facebook_app_id">1467094533604194</string>
    <string name="app_name">Aozora Forums</string>
    <string name="activity_login_app_name">Aozora Forums</string>
       <string name="activity_login_tvAppMessage_Text">
  <![CDATA[
  The largest anime comunity for <b>sharing</b> and <b>discovering</b> anime with friends.
    ]]>
    </string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="jap_name">青空</string>
    <string name="activity_first_btnMailSignUp_Text">Register with email</string>
    <string name="activity_first_btnLogin_Text">Already have an account? Log in</string>
    <string name="activity_first_btnSkipLogin_Text">Skip sign up</string>
    <string name="activity_loginForm_tvTitle_Text">Login Aozora</string>
    <string name="activity_first_btnFacebook_Text">Sign up or Login with Facebook</string>
    <string name="activity_loginForm_etUsername_Hint">Username</string>
    <string name="activity_loginForm_etPassword_Hint">Password</string>
    <string name="activity_loginForm_tvForgotPassword_Text">Forgot password?</string>
    <string name="activity_loginForm_btnLogin_Text">Log in</string>

    <string name="activity_signUpForm_tvTitle_Text">Sign up Aozora</string>
    <string name="activity_signUpForm_ivAvatar_Text">Select</string>
    <string name="activity_signUpForm_etPickUsername_Text">Pick a username</string>
    <string name="activity_signUpForm_etEmail_Text">Email</string>
    <string name="activity_signUpForm_etPassword_Text">Password</string>
    <string name="activity_signUpForm_btnSignUp_Text">Sign Up</string>
    <string name="activity_signUpForm_emptyUsername">Please write a username</string>
    <string name="activity_signUpForm_emptyPassword">Please write a password</string>
    <string name="activity_signUpForm_emptyEmail">Please write an email</string>
    <string name="activity_signUpForm_badFormatEmail">Please write a valid email</string>
    <string name="activity_resetPassword_tvTitle_Text">Reset password</string>
    <string name="activity_resetPassword_btnReset_Text">Reset password</string>
    <string name="activity_resetPassword_etEmail_Hint">Email of the account</string>
    <string name="activity_resetPassword_validationMessage">An email was sent with reset instructions.</string>
    <string name="message_no_internet">This operation is not possible without internet</string>

    <string name="fa_icon_animeInfo">&#xf05a;</string>
    <string name="fa_icon_animeEpisodes">&#xf152;</string>

    <string name="fa_icon_angledown">&#xf107;</string>
    <string name="fa_icon_starhalfull">&#xf123;</string>

    <string name="fragment_season_rating_icon">&#xf1fe;</string>
    <string name="fragment_season_members_icon">&#xf007;</string>

    <string name="fa_icon_timescircle">&#xf057;</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="active_now">ACTIVE NOW</string>

    <string name="fa_icon_reposted_by">&#xf079;</string>
    <string name="fa_right_arow">&#xf061;</string>

    <string name="fa_plus">&#xf067;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_save">&#xf0c7;</string>
    <string name="fa_questionmark">&#xf059;</string>
    <string name="fa_readallnoti">&#xf05d;</string>


    <string name="dialog_delete_post">Yes, delete it</string>

    <string-array name="red_options_dialog">
        <item>Report Content</item>
        <item>Ban Post [Deletes it]</item>
        <item>Mute</item>
        <item>Ban Post [Hides it]</item>
    </string-array>

    <string-array name="other_user_post_options">
        <item>Report Content</item>
    </string-array>

    <string-array name="edit_post_options">
        <item>Edit</item>
    </string-array>

    <string-array name="admin_thread_options">
        <item>Edit</item>
        <item>Ban Post [Hides it]</item>
    </string-array>

    <string-array name="admin_post_options">
        <item>Edit</item>
        <item>Ban Post [Deletes it]</item>
    </string-array>

    <string-array name="my_profile_options">
        <item>Edit Profile</item>
        <item>My Threads</item>
        <item>Reputation Ranks</item>
        <item>Discover Users</item>
    </string-array>

    <string-array name="user_lists_options">
        <item>Online Now</item>
        <item>New Users</item>
        <item>Aozora Staff</item>
        <item>New PRO Members</item>
        <item>Oldest Active Users</item>
    </string-array>

    <string-array name="reputation_ranks">
        <item>Top 500 Reputation Rank</item>
        <item>Following Reputation Rank</item>
    </string-array>

    <string-array name="sort_options">
        <item>Popular</item>
        <item>Rising</item>
        <item>New</item>
    </string-array>

    <string-array name="my_profile_other_user_options">
        <item>Threads created</item>
    </string-array>

    <string-array name="my_profile_other_user_admin">
        <item>Threads created</item>
        <item>Mute</item>
    </string-array>

    <string-array name="no_results_message">
        <item>No results, but check this popular threads!</item>
        <item>0 results. Read xgeibu essay about it.</item>
        <item>Sorry senpai, 0 results. Please be gentle.</item>
        <item>No results, but did you know Raizer is hot!?</item>
        <item>0 results b-b-a-ka! Yes this is cringy</item>
        <item>The robot bringing the results died. 0 results</item>
        <item>I wish i could marry Shaz... i mean 0 results!</item>
        <item>Sunshine\'s fault, she is the new Umaru. 0 results</item>
    </string-array>

    <string name="aotracking_desc">AoTracking helps you to manage your anime life easily, tracking the anime series you are seeing.</string>
    <string name="aodiscover_desc">Introducing a new way of discovering new anime. Just write a sentence describing the anime you want to find. That\'s it!</string>
    <string name="aotalk_desc">Chat with anyone! Inside or outside Aozora. Many features chat other apps don\'t have.</string>
    <string name="app_inconstruction">Sorry! Our robots are still building this app.</string>

    <string name="aogur_desc">Post funny, interesting images and videos in AoGur section.\nSpend some time crafting your post. \nUpvoted posts stay in the top longer.</string>

    <string name="aotalkforum_desc">Create a great conversation\nMake it relevant to this community \nIf it\'s about a specific Anime, search it above.</string>

    <string name="aoart_desc">Post anime art \nIf the work is not yours, don\'t use tags like #MyFanart </string>

    <string name="aonews_desc">Post anime industry related news\nInclude the source (url/video) to make your article valid</string>


    <string name="admob_main">ca-app-pub-3538998045407451/6861879925</string>
    <string name="bepk">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAsIlJJXf1Hld7cSItdzTqiJm69hLoj+h3CZQ2tJWi9AN+JsWox0hVehwXMW9IOB+cxFwEY1XgbvBX1bSrFYhlVGRLGolajBIUF5JgO3Senck54BfHce9ADY4/sIDQNtorBs8b29aPCQbdmSDh2QLizfoh1N2oquk7gQwqtqVHsT7oJjjonx+GZH8z4LjKpEBFI3wQyHRiTQC40Dyd8263B332vL7DY8hMW+33F6Woi0tcyaWiUL8YrXXDt2+B4RWBLpNqgItmhH7UjabDGYW5Z9pB4oUS0bUn/yaBOnApkV8CtKooETgO2nVc5DZNMNvEwAfYKagdR6ju4RQVY/CuvwIDAQAB</string>

    <string name="pro_desc"><b><i>Remove all ads</i></b>, get a <b><i>PRO badge</i></b> showing the community your support and more importantly helps us! <b><i>take this app to the next level</i></b>!\nYou will unlock features for <a href="https://play.google.com/store/apps/details?id=com.everfox.animetrackerandroid">Aozora Anime Tracker App!</a> </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
