<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.everfox.aozoraforums.FirstActivity">


    <VideoView
        android:id="@+id/vvIntro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:visibility="visible"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:alpha=".5"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_first_ivJapaneseName_marginTop"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvJapaneseName"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:text="@string/jap_name"
            android:textSize="@dimen/activity_first_tvJapName_fontSize"/>

        <TextView
            android:id="@+id/tvAppName"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/activity_first_tvAppName_fontSize"
            android:text= "@string/activity_login_app_name" />


        <TextView
            android:id="@+id/tvAppMessage"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/activity_first_tvMessage_fontSize"
            android:text="@string/activity_login_tvAppMessage_Text"
            ></TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        >

        <RelativeLayout
            android:id="@+id/rlMailSignUp"
            android:background="@drawable/button_white_rounded_corner"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <ImageView
                android:layout_toStartOf="@+id/tvMailSignUp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/message_filled"/>
            <TextView
                android:id="@+id/tvMailSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#000000"
                android:text="@string/activity_first_btnMailSignUp_Text"/>
        </RelativeLayout>


        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/activity_first_btnLogin_Text"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            />



    </LinearLayout>

</RelativeLayout>
