<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.everfox.aozoraforums.activities.LoginFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="#616161"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="40dp"
        >
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_loginForm_etUsername_Hint"
            android:background="@drawable/edittext_rounded_corners"
            android:padding="8dp"
            android:textColorHint="#878787"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_loginForm_etPassword_Hint"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_rounded_corners"
            android:padding="8dp"
            android:textColorHint="#878787"
            android:inputType="textPassword"
            />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/activity_loginForm_tvForgotPassword_Text"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_white_rounded_corner"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:text="@string/activity_loginForm_btnLogin_Text"/>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rlFacebook"
        android:background="@drawable/button_facebook_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp">
        <ImageView
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/tvFacebookButtonMessage"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/facebook"/>
        <TextView
            android:id="@+id/tvFacebookButtonMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#FFFFFF"
            android:text="Login with Facebook"/>
    </RelativeLayout>

</RelativeLayout>
