<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.everfox.aozoraforums.activities.MainActivity">


    <FrameLayout
        android:id="@+id/flContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llNavBar"
        ></FrameLayout>


    <LinearLayout
        android:id="@+id/llNavBar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grayC5"
            ></View>

        <LinearLayout
            android:id="@+id/llMenu"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:background="#FFFFFF"
            android:visibility="visible"
            >
            <TextView
                android:id="@+id/btnForum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/fa_icon_animeInfo"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"

                />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.01"
                />

            <TextView
                android:id="@+id/btnNotifications"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/fa_icon_animeEpisodes"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_gravity="center"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.01"
                />


            <TextView
                android:id="@+id/btnProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/fa_icon_timescircle"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_gravity="center"
                />

        </LinearLayout>
    </LinearLayout>
    
</RelativeLayout>
